# anon-communication

./: .gitmodules  CMakeLists.txt  Makefile  README.md  Readme.md  annoncomm.cpp  annoncomm.hpp  audit_server.py  block.h  bulletin_board.proto  bulletin_board_pb2.py  bulletin_board_pb2_grpc.py  client.py  duoram.tcc  mpcio.cpp  mpcio.tcc  online.cpp  preproc.cpp  remise.cpp  remise.hpp  remise2.sh  run-experiments.sh  server0.py  server0_storage.txt  server1.py  server1_storage.txt
docker/: log  log1  log2  run-experiments.sh
include/: aes.hpp  anoncomm.hpp  avl.hpp  bitutils.hpp  bst.hpp  cdpf.hpp  cdpf.tcc  cell.hpp  corotypes.hpp  coroutine.hpp  dpf.hpp  duoram.hpp  duoram.tcc  heap.hpp  heapsampler.hpp  mpcio.hpp  mpcio.tcc  mpcops.hpp  mpcops.tcc  options.hpp  preproc.hpp  prg.hpp  rdpf.hpp  rdpf.tcc  remise.hpp  shapes.hpp  shapes.tcc  types.hpp
lowmc/: contstants_b128_r29_s11.h  gen_constants.cpp  lowmc.cpp  randomness.h  streams.h
scripts/: remise0.sh  remise1.sh
src/: avl.cpp  bst.cpp  cdpf.cpp  cell.cpp  duoram.cpp  heap.cpp  heapsampler.cpp  mpcio.cpp  mpcops.cpp  rdpf.cpp  remise.cpp
src/client/: main.cpp
src/server/: anoncomm.cpp  online.cpp  prac.cpp  preproc.cpp
